foobar-api/argo/argo-events/foobar-api/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foobar-webhook
  namespace: foobar
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.mykubernetes.com`)
      services:
        - name: foobar-webhook-eventsource-svc
          port: 12000
          passHostHeader: true
  tls:
    secretName: traefik-dashboard-cert
